# cpp-fxprocessor

./: .gitignore  CMakeLists.txt  README
src/: FxChain.hpp  main.cpp
src/nodes/: AudioNode.hpp  ConstantNode.hpp  ControlNode.hpp  GainNode.hpp  Node.hpp  ReverbNode.hpp
